--- a/Css/style.css
+++ b/Css/style.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0 auto;
     box-sizing: border-box;
@@ -5,9 +6,11 @@ body {
 }
 
 .conteudo {
-    width: 412px;
-    height: 915px;
+    width: 375px;
+    height: 100%;
     margin: 0 auto;
+    background: red;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .topo {
@@ -17,7 +20,10 @@ body {
     align-items: center;
     padding: 0 20px;
     height: 80px;
+    width: 375px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
+    position: fixed;
+    top: 0;
 }
 
 .topo ion-icon {
@@ -26,10 +32,12 @@ body {
 }
 
 .conversas {
-    height: 393px;
+    height: 614px;
     background:#E5E5E5;
     padding-top: 15px;
     overflow-x: hidden;
+    max-width: 375px;
+    margin: 0 auto;
 }
 
 ul {
@@ -61,11 +69,19 @@ li {
 
 .mensagens {
     background: #FFFFFF;
+    width: 375px;
     height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
+    position: fixed;
+    bottom: 0;
+}
+
+.topo ion-icon {
+    height: 26px;
+    width: 26px;
 }
 
 textarea {
@@ -76,4 +92,26 @@ textarea {
 
 .envio {
     cursor: pointer;
+}
+
+.horario {
+    color: #AAAAAA;
+    font-size: 14px;
+}
+
+.texto {
+    font-family: Arial, Helvetica, sans-serif;
+font-size: 14px;
+font-weight: 400;
+line-height: 16px;
+letter-spacing: 0em;
+color: black;
+
+}
+
+bold {
+    font-family: Arial, Helvetica, sans-serif;
+font-size: 14px;
+font-weight: 700;
+line-height: 16px;
 }
