--- a/Css/style.css
+++ b/Css/style.css
@@ -1,7 +1,7 @@
 
 body {
     margin: 0 auto;
-    box-sizing: border-box;
+    
     
 }
 
@@ -11,6 +11,7 @@ body {
     margin: 0 auto;
     background: red;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
 .topo {
@@ -18,7 +19,6 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
     height: 80px;
     width: 375px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.05);
@@ -26,9 +26,8 @@ body {
     top: 0;
 }
 
-.topo ion-icon {
-    height: 45px;
-    width: 45px;
+.topo img{
+    padding: 0 10px;
 }
 
 .conversas {
@@ -41,7 +40,7 @@ body {
 }
 
 ul {
-    background: #DCDCDC;
+    background: #FFFFFF;
     width: 100%;
     height: 40px;
     overflow-y: auto;
@@ -52,7 +51,8 @@ li {
     min-height: 40px;
     max-height: 100%;
     border-radius: 2px;
-
+    margin: 5px;
+    padding-right: 10px;
 }
 
 .entrada {
@@ -74,20 +74,13 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
     position: fixed;
     bottom: 0;
 }
 
-.topo ion-icon {
+.mensagens ion-icon {
     height: 26px;
     width: 26px;
-}
-
-textarea {
-    outline: 0;
-    border: 0;
-    resize: none;
 }
 
 .envio {
@@ -111,7 +104,13 @@ color: black;
 
 bold {
     font-family: Arial, Helvetica, sans-serif;
-font-size: 14px;
+font-size: 16px;
 font-weight: 700;
 line-height: 16px;
+}
+
+textarea {
+    outline: 0;
+    border: 0;
+    resize: none;
 }
